# agentwall

./: .dockerignore  .gitignore  AgentWall-usecases.html  AgentWall.html  Cargo.toml  Dockerfile  README.md  agentwall-policy.yaml  docker-compose.yml  fresh_test.txt  install.sh  package.py  policy-test.yaml  policy.example.yaml  policy.yaml  quickstart_agent.py  scratch_test.rs  test_rsa_pem  test_rsa_pem.pub
.github/workflows/: agentwall-assess.yml  ci.yml  release.yml
agentwall-v1.0.3/: start-agentwall.ps1  start-agentwall.sh
agentwall-v1.0.3/config/: policy.yaml.example
bench/results/: policy_eval_baseline.md
benches/: policy_eval.rs  proxy_overhead.rs  safe_mode.rs
chart/: Chart.yaml  README.md  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  crd.yaml  dashboard-api-deployment.yaml  dashboard-api-service.yaml  dashboard-db-secret.yaml  dashboard-db-service.yaml  dashboard-db-statefulset.yaml  dashboard-frontend-deployment.yaml  dashboard-frontend-nginx-configmap.yaml  dashboard-frontend-service.yaml  dashboard-gateway-secret.yaml  dashboard-networkpolicy.yaml  dashboard-policy-read-secret.yaml  gateway-configmap.yaml  gateway-deployment.yaml  gateway-service.yaml  gateway-tls-secret.yaml  namespace.yaml  operator-deployment.yaml  policy-cr.yaml  rbac.yaml
dashboard/: docker-compose.yml
dashboard/api/: Dockerfile  go.mod  go.sum  main.go
dashboard/api/internal/config/: config.go
dashboard/api/internal/handler/: alerts.go  fleet.go  identity.go  ingest.go  policy.go
dashboard/api/internal/middleware/: oidc.go
dashboard/api/internal/model/: types.go
dashboard/api/internal/sse/: broker.go
dashboard/api/internal/store/: postgres.go
dashboard/db/migrations/: 000001_init_schema.down.sql  000001_init_schema.up.sql
dashboard/frontend/: .gitignore  nginx.conf  package-lock.json  package.json  vite.config.ts
dashboard/frontend/src/: App.tsx
dashboard/frontend/src/api/: client.ts
dashboard/frontend/src/views/: FleetOverview.tsx  IdentityGovernance.tsx
dashboard/proto/: Cargo.toml
dashboard/proto/src/: alert.rs  credential.rs  event.rs  lib.rs  redact.rs  tests.rs
demo-ui/: README.md  bridge.py  demo_setup.md  index.html  policy.example.yaml  session-report.json
docs/: VexaAgentWall-PRD-v5.1.md  comprehensive_guide.md  configuration.md  deployment.md  index.md  integrations.md  quickstart.md
manual_test/: fixture.json  policy.yaml  test_flags.py  test_wrap.py
operator/: Makefile  go.mod  main.go
operator/api/v1alpha1/: agentwall_types.go  groupversion_info.go  zz_generated.deepcopy.go
operator/config/crd/: agentwall_policy.yaml
operator/config/rbac/: rbac.yaml
operator/controllers/: agentwall_controller.go  networkpolicy.go
src/: check.rs  cli.rs  generate_policy.rs  init.rs  kill.rs  lib.rs  lint.rs  logging.rs  main.rs  promote.rs  report.rs  self_healing.rs  validate.rs
src/audit/: logger.rs  mod.rs  siem.rs  verifier.rs
src/dashboard/: dashboard.html  mod.rs
src/dashboard_fr23/: bridge.rs  client.rs
src/identity/: audit.rs  audit_log.rs  create.rs  credential.rs  inspect.rs  mod.rs  rotate.rs  scope.rs  scope_validator.rs  vault.rs
src/policy/: community_rules.rs  credential_scope.rs  dlp.rs  engine.rs  identity.rs  injection.rs  loader.rs  mod.rs  response_scanner.rs  safe_mode.rs  schema.rs  semantic.rs
src/proxy/: codec.rs  db.rs  egress.rs  forward.rs  handler.rs  mod.rs  server.rs  session.rs  stdio.rs  tls.rs
src/wrap/: backup.rs  claude.rs  config_path.rs  generic_ide.rs  mod.rs  transformer.rs
test-tools/: mock-stdio-server.py  mock_oidc.py  mock_splunk.py  multi_os_matrix.ps1  test-policy.yaml  test-stdio-wrap.py
test-tools/dogfood/: run-dogfood-tests.py  setup-windows.ps1  stress-test.py  test-wrap-cycle.py
test-tools/fixtures/: nested_validation.json
test-tools/mock-mcp-server/: Cargo.toml  Dockerfile
test-tools/mock-mcp-server/src/: main.rs
test-tools/reference-agent/: agent.py
tests/: audit_tests.rs  identity_integration_test.rs  install_script_test.sh  integration.rs  p1_features_tests.rs  phase_1_1_tests.rs  policy_tests.rs  promotion_tests.rs  unit.rs  wrap_integration_test.rs
tests/fixtures/: validators-policy.yaml
tests/fixtures/payloads/: read_file_ok.json  read_file_traversal.json
tests/integration/: audit_integration_tests.rs  dashboard_test.rs  egress_proxy_tests.rs  gateway_fr5.rs  multi_tenant_tests.rs  phase_1_1_tests.rs  proxy_test.rs  stdio_tests.rs
tests/load/: k6_nfr101.js
tests/operator/: operator_e2e_test.go
tests/unit/: audit_tests.rs  dashboard_html_test.rs  firewall_tests.rs  generate_policy_test.rs  linter_tests.rs  oidc_tests.rs  p1_features_tests.rs  policy_loader_tests.rs  policy_tests.rs  self_healing_test.rs  siem_tests.rs  validator_tests.rs
