[package]
name = "dashboard-proto"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "AgentWall FR-23 dashboard wire-boundary types. The ONLY shape in which gateway data may cross into dashboard-api. See AC-23.10."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
